--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,19 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-Flask = "==2.0.0"
+boto3 = "*"
+aws-xray-sdk = "==2.8.0"
+request = "~=2.27.1"
+requests-aws4auth = "==1.1.2"
+cryptography = "==36.0.2"
+PyJWT = "==1.7.1"
+flask = "==2.0.2"
 Werkzeug = "==2.0.1"
 
 [dev-packages]
+pytest = "*"
+pytest-cov = "*"
+pytest-mock = "==3.5.1"
 
 [requires]
-python_version = "3.9"
+python_version = "3.8.10"
